fixed layout bug

--- a/src/components/Home/index.scss
+++ b/src/components/Home/index.scss
@@ -1,5 +1,4 @@
 .home-page {
-
     .text-zone {
         position: absolute;
         left: 10%;
@@ -86,5 +85,24 @@
         display: none;
     }
 
-    
+    .home-page {
+        .text-zone {
+            position: initial;
+            width: 100%;
+            transform: none;
+            padding: 10px;
+            box-sizing: border-box;
+        }
+
+        .flat-button {
+            float: none;
+            display: block;
+            margin: 20px auto 0 auto;
+            width: 125px;
+        }
+
+        .logo-container {
+            display: none;
+        }
+    }
 }
